# microclaw

./: CHANGELOG.md  Cargo.toml  SOUL.md  microclaw.config.example.yaml
crates/microclaw-app/src/: builtin_skills.rs
crates/microclaw-storage/src/: db.rs
docs/: IMPLEMENTED.md  being-more-human.md  builtin-skills-roster.md  concurrent-tasks-progress-reporting.md  how-to-be-a-human.md  humanlike-chat-analysis.md
skills/built-in/algorithmic-art/: SKILL.md
skills/built-in/api-design/: SKILL.md
skills/built-in/brainstorming/: SKILL.md
skills/built-in/calculator/: SKILL.md
skills/built-in/code-review/: SKILL.md
skills/built-in/color-tools/: SKILL.md
skills/built-in/csv-tools/: SKILL.md
skills/built-in/data-analysis/: SKILL.md
skills/built-in/datetime/: SKILL.md
skills/built-in/debugging/: SKILL.md
skills/built-in/decision-matrix/: SKILL.md
skills/built-in/define/: SKILL.md
skills/built-in/email-drafting/: SKILL.md
skills/built-in/git/: SKILL.md
skills/built-in/goal-setting/: SKILL.md
skills/built-in/json-tools/: SKILL.md
skills/built-in/meeting-notes/: SKILL.md
skills/built-in/mermaid/: SKILL.md
skills/built-in/planning/: SKILL.md
skills/built-in/qrcode/: SKILL.md
skills/built-in/regex/: SKILL.md
skills/built-in/research/: SKILL.md
skills/built-in/shell-scripting/: SKILL.md
skills/built-in/sql/: SKILL.md
skills/built-in/summarize/: SKILL.md
skills/built-in/testing/: SKILL.md
skills/built-in/translate/: SKILL.md
skills/built-in/unit-converter/: SKILL.md
skills/built-in/wikipedia/: SKILL.md
skills/built-in/writing-editor/: SKILL.md
src/: agent_engine.rs  config.rs  lib.rs  mood.rs  runtime.rs  scheduler.rs
src/tools/: consult_specialist.rs  mod.rs  report_progress.rs  specialists.rs  subagents.rs
tests/: config_validation.rs
