[workspace]
members = [
    ".",
    "crates/microclaw-core",
    "crates/microclaw-clawhub",
    "crates/microclaw-storage",
    "crates/microclaw-tools",
    "crates/microclaw-channels",
    "crates/microclaw-app",
    "crates/microclaw-observability",
]
resolver = "2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[package]
name = "microclaw"
version = "0.1.58"
edition = "2021"
license = "MIT"
default-run = "microclaw"

[features]
default = []
sqlite-vec = ["microclaw-storage/sqlite-vec"]
journald = ["microclaw-app/journald"]
channel-matrix = ["dep:matrix-sdk"]
full = ["channel-matrix"]

[dependencies]
microclaw-core = { version = "0.1.0", path = "crates/microclaw-core" }
microclaw-clawhub = { version = "0.1.0", path = "crates/microclaw-clawhub" }
microclaw-storage = { version = "0.1.0", path = "crates/microclaw-storage" }
microclaw-tools = { version = "0.1.0", path = "crates/microclaw-tools" }
microclaw-channels = { version = "0.1.0", path = "crates/microclaw-channels" }
microclaw-app = { version = "0.1.0", path = "crates/microclaw-app" }
microclaw-observability = { version = "0.1.0", path = "crates/microclaw-observability" }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
agent-client-protocol = "0.10.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
cron = "0.15"
urlencoding = "2"
base64 = "0.22"
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
zip = "2"
sha2 = "0.10"
md5 = "0.7"
axum = { version = "0.7", features = ["ws"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "native_tls_backend"] }
include_dir = "0.7"
async-stream = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
argon2 = "0.5"
opentelemetry-proto = { version = "0.28", features = ["gen-tonic-messages"] }
opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
prost = "0.13"
matrix-sdk = { version = "0.16.0", optional = true, default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "native-tls", "sqlite", "bundled-sqlite"] }
clap = { version = "4.6", features = ["derive"] }
http = "1"
rmcp = { version = "1.3", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
shellexpand = "3.1.2"
qrcode = "0.14"
yaml-edit = "0.2.0"

[dev-dependencies]
tower = "0.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
